Added two ice creams to json file

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		var section = document.querySelector('section');
 
 		/* STEP 3: Store the URL of a JSON file in a variable */
-		var requestURL = 'https://dario-hesami.github.io/JSON/js/i-scream.json'
+		var requestURL = 'https://danieldidit.github.io/JSlab10//js/i-scream.json'
 
 		/* STEP 4: Create a new XHR object */
 		var request = new XMLHttpRequest();
@@ -64,7 +64,7 @@
 				var p2 = document.createElement('p');
 				var list = document.createElement('ul');
 
-				img.setAttribute('src', 'https://dario-hesami.github.io/JSON/images/' + topFlavors[i].image)
+				img.setAttribute('src', 'https://danieldidit.github.io/JSlab10/images/' + topFlavors[i].image)
 				h2.textContent = topFlavors[i].name;
 				p1.textContent = 'Calories: ' + topFlavors[i].calories;
 				p2.textContent = topFlavors[i].responseType;
