--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		var section = document.querySelector('section');
 
 		/* STEP 3: Store the URL of a JSON file in a variable */
-		var requestURL = 'https://danieldidit.github.io/JSlab10//js/i-scream.json'
+		var requestURL = 'https://danieldidit.github.io/JSlab10/js/i-scream.json';
 
 		/* STEP 4: Create a new XHR object */
 		var request = new XMLHttpRequest();
